# mandelbrot

./: CMakeLists.txt  GuardQImage.h  MandelbrotDrawer.h  README.md  RenderWindow.cpp  RenderWindow.h  main.cpp
